Update LibroServiceTest 100% test